@@ -1,3 +1,8 @@
+2011-05-28  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
+
+	* src/config.c, src/main.c, src/vt100.c, src/vt100.h: Add transmit
+	  delay for every character, based on patch by Nicolas PILLON.
+
 2011-04-16  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>
 
 	* src/config.c: Do not extend tilde to home directory for
